// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test dataset generation 1`] = `
"{
  \\"rasa_nlu_data\\": {
    \\"regex_features\\": [],
    \\"entity_synonyms\\": [
      {
        \\"value\\": \\"off\\",
        \\"synonyms\\": [
          \\"turn off\\",
          \\"deactivate\\"
        ]
      },
      {
        \\"value\\": \\"on\\",
        \\"synonyms\\": [
          \\"turn on\\",
          \\"activate\\"
        ]
      }
    ],
    \\"common_examples\\": [
      {
        \\"text\\": \\"Hey Bot turn off the lights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 16,
            \\"value\\": \\"off\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 21,
            \\"end\\": 27,
            \\"value\\": \\"lights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot turn off the lowLights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 16,
            \\"value\\": \\"off\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 21,
            \\"end\\": 30,
            \\"value\\": \\"lowLights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot deactivate the lights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 18,
            \\"value\\": \\"off\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 23,
            \\"end\\": 29,
            \\"value\\": \\"lights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot deactivate the lowLights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 18,
            \\"value\\": \\"off\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 23,
            \\"end\\": 32,
            \\"value\\": \\"lowLights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot turn on the lights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 15,
            \\"value\\": \\"on\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 20,
            \\"end\\": 26,
            \\"value\\": \\"lights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot turn on the lowLights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 15,
            \\"value\\": \\"on\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 20,
            \\"end\\": 29,
            \\"value\\": \\"lowLights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot activate the lights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 16,
            \\"value\\": \\"on\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 21,
            \\"end\\": 27,
            \\"value\\": \\"lights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      },
      {
        \\"text\\": \\"Hey Bot activate the lowLights\\",
        \\"intent\\": \\"lightChange\\",
        \\"entities\\": [
          {
            \\"start\\": 8,
            \\"end\\": 16,
            \\"value\\": \\"on\\",
            \\"entity\\": \\"switch\\"
          },
          {
            \\"start\\": 21,
            \\"end\\": 30,
            \\"value\\": \\"lowLights\\",
            \\"entity\\": \\"lights\\"
          }
        ]
      }
    ]
  }
}"
`;

exports[`test npm command line generator for rasa dataset 1`] = `
"/Users/rodrigo/Trabajo/Chatito/examples/lightsManager/lightsManager_rasa_training_100.json
{ total: 8, training: 100, testing: 0 }
"
`;

exports[`test npm command line generator for snips dataset 1`] = `
"/Users/rodrigo/Trabajo/Chatito/examples/lightsManager/lightsManager_snips_training_100.json
{ total: 8, training: 100, testing: 0 }
"
`;
